<resources>
    <string name="app_name">ShoppingApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_name">Item Name</string>
    <string name="price">Price</string>
    <string name="tax">tax</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="qty">Qty:</string>
    <string name="cart">Cart</string>
    <string name="total_amount">Total Amount</string>
    <string name="checkout">CHECKOUT</string>
    <string name="remove_item">Remove Item</string>
    <string name="total">Total</string>
    <string name="sub_total">Sub Total</string>
    <string name="tax_total">Tax Total</string>
</resources>