<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="12dp"
    android:paddingEnd="12dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:minHeight="120dp"
    android:descendantFocusability="blocksDescendants">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="6dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:id="@+id/itemName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_name"
                android:textColor="?colorPrimary"
                android:textAllCaps="true"
                style="@style/TextAppearance.Material3.TitleMedium"/>
            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textStyle="bold"
                style="@style/TextAppearance.Material3.TitleLarge"/>
            <androidx.legacy.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="8dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qty"/>
                <TextView
                    android:id="@+id/tvQuantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minWidth="40dp"
                    android:padding="8dp"
                    android:textSize="16sp"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
    <ImageView
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_alignParentEnd="true"
        android:id="@+id/imgRemove"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@string/remove_item"
        android:src="@drawable/baseline_delete_24"/>

    <TextView
        android:layout_marginEnd="16dp"
        android:layout_marginTop="90dp"
        android:layout_alignParentEnd="true"
        android:id="@+id/tvTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textStyle="bold"
        style="@style/TextAppearance.Material3.TitleMedium"/>


</RelativeLayout>