<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="12dp"
    android:paddingEnd="12dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:minHeight="120dp"
    android:descendantFocusability="blocksDescendants">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="6dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:id="@+id/itemName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_name"
                android:textColor="?colorPrimary"
                android:textAllCaps="true"
                style="@style/TextAppearance.Material3.TitleMedium"/>
            <TextView
                android:id="@+id/taxPercentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tax"
                android:textStyle="bold"
                style="@style/TextAppearance.Material3.BodyLarge"/>
            <androidx.legacy.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="18dp"/>
            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textStyle="bold"
                style="@style/TextAppearance.Material3.TitleLarge"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="6dp">
                <include
                    android:id="@+id/qtyLayout"
                    layout="@layout/qty_layout"/>
            </LinearLayout>
            <androidx.legacy.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="8dp"/>
            <Button
                android:id="@+id/addToCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_to_cart"
                style="@style/Widget.Material3.Button.OutlinedButton"/>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>