<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ui.cart.CartFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvProducts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="128dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:baselineAligned="false"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="6dp">
            <TextView
                android:id="@+id/txt_tax"
                style="@style/TextAppearance.Material3.TitleSmall"
                android:layout_width="wrap_content"
                android:text="@string/tax_total"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_alignBaseline="@+id/txt_tax"
                android:id="@+id/tvTaxTotal"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="wrap_content"
                android:textAlignment="textEnd"
                android:textStyle="bold"
                android:layout_alignParentEnd="true"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_below="@+id/txt_tax"
                android:id="@+id/txt_sub_total"
                style="@style/TextAppearance.Material3.TitleSmall"
                android:layout_width="wrap_content"
                android:text="@string/sub_total"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_alignBaseline="@+id/txt_sub_total"
                android:id="@+id/tvSubTotal"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="wrap_content"
                android:textAlignment="textEnd"
                android:textStyle="bold"
                android:layout_alignParentEnd="true"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:padding="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center|start"
                android:orientation="vertical"
                android:paddingStart="4dp"
                android:paddingEnd="2dp">

                <TextView
                    android:id="@+id/tvTotal"
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"/>

                <TextView
                    style="@style/TextAppearance.Material3.BodySmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_amount"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btnCheckout"
                    style="@style/Theme.Button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/checkout" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</FrameLayout>